estados autores y medios
